--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <!-- And then your bundled js -->
-    <script src="bundle.js"></script>
+    <script type='text/html' src="bundle.js"></script>
   </body>
 </html>
