--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script type = "text/javascript" src = "https://code.jquery.com/jquery-2.1.1.min.js"></script> <script>
+        $(document).ready(function() {
+          $('select').formSelect();
+        });
+    </script>
   </head>
+  
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
