--- a/public/index.html
+++ b/public/index.html
@@ -30,11 +30,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <script type = "text/javascript" src = "https://code.jquery.com/jquery-2.1.1.min.js"></script> <script>
-        $(document).ready(function() {
-          $('select').formSelect();
-        });
-    </script>
+    <script type = "text/javascript" src = "https://code.jquery.com/jquery-2.1.1.min.js"></script> 
   </head>
   
   <body>
